--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,12 @@
 [metadata]
 name = atcoder_client_tools
-version = 0.1.0
+version = 0.1.1
 description = atcoder client tools
 
 [options]
+package_dir=
+    =src
+packages=find:
 install_requires =
     click
 
