atcoder client tools v0.1.2

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = atcoder_client_tools
-version = 0.1.1
+version = 0.1.2
 description = atcoder client tools
 
 [options]
@@ -9,6 +9,9 @@ package_dir=
 packages=find:
 install_requires =
     click
+
+[options.packages.find]
+where=src
 
 [options.entry_points]
 console_scripts = 
