--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = atcoder_client_tools
-version = 0.1.2
+version = 0.1.5
 description = atcoder client tools
 
 [options]
@@ -9,6 +9,8 @@ package_dir=
 packages=find:
 install_requires =
     click
+    beautifulsoup4
+    selenium
 
 [options.packages.find]
 where=src
