atcoder client tools v0.1.5c

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ version = 0.1.5
 description = atcoder client tools
 
 [options]
+include_package_data = True
 package_dir=
     =src
 packages=find:
