--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-atcoder-client-tools = {editable = true,path = "."}
+pypro-atcoder = {editable = true,path = "."}
 
 [requires]
 python_version = "3.8"
