--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
-name = atcoder_client_tools
+name = pypro
 version = 0.1.5
-description = atcoder client tools
+description = pypro
 
 [options]
 include_package_data = True
@@ -18,4 +18,4 @@ where=src
 
 [options.entry_points]
 console_scripts = 
-    act = atcoder.cli:main
+    pypa = pypro.atcoder:main
