[wip] pp atcoder get,init,test

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,4 +18,5 @@ where=src
 
 [options.entry_points]
 console_scripts = 
-    pypa = pypro.atcoder:main
+    pypa = pypro.atcoder2:main
+    pp = pypro.cli:main
