[wip] feat: pp atcoder git

--- a/.envrc
+++ b/.envrc
@@ -1,2 +1,4 @@
-export PYPRO_WORK_DIR_PATH=/Users/ykmc/src/github.com/ykmc/contest/pypro/work
-export PYPRO_ATCODER_TEMPLATE_DIR_PATH=/Users/ykmc/src/github.com/ykmc/contest/pypro/template-atcoder
+export PYPRO_HOME=/Users/ykmc/src/github.com/ykmc/pypro
+export PYPRO_ATCODER_WORK_DIR=work
+export PYPRO_ATCODER_GIT_DIR=atcoder
+export PYPRO_ATCODER_TEMPLATE_DIR=template/atcoder
