fix: environment vars

--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,4 @@
 export PYPRO_HOME=/Users/ykmc/src/github.com/ykmc/pypro
-export PYPRO_ATCODER_WORK_DIR=work
-export PYPRO_ATCODER_GIT_DIR=atcoder
-export PYPRO_ATCODER_TEMPLATE_DIR=template/atcoder
+export PYPRO_TEMPLATE_DIR=template
+export PYPRO_WORK_DIR=work
+export PYPRO_ATCODER_DIR=atcoder
